--- a/src/components/AddTask/addTask.module.css
+++ b/src/components/AddTask/addTask.module.css
@@ -1,3 +1,22 @@
-.addTask {
-  /* Sample */
+.todoForm{
+  display: flex;
+  justify-content: space-around;
+  border-bottom: .4px solid lightgray;
+  padding: 1px;
+  align-items: center;
+}
+.todoForm input{
+  width: 80%;
+  height: 40px;
+  border: none;
+  outline: none;
+  font-size: 20px;
+  font-weight: 600;
+}
+.todoForm button{
+  border: none;
+  background-color: white;
+  color: blue;
+  font-weight: 900;
+  font-size: 30px;
 }
