--- a/src/components/TaskHeader/taskHeader.module.css
+++ b/src/components/TaskHeader/taskHeader.module.css
@@ -1,3 +1,12 @@
 .taskHeader {
   /* Sample */
+  width: 100%;
+  max-width: 380px;
+  color: white;
+  font-weight: 700;
+  background-image: linear-gradient(135deg, #61ec94 10%, #0c4f93 100%);
+  background-repeat: repeat;
+  border: 1px solid;
+  border-radius: 10px 10px 0 0;
+  padding:10px 0 30px 0
 }
