--- a/src/components/taskApp.module.css
+++ b/src/components/taskApp.module.css
@@ -1,3 +1,11 @@
 .taskApp {
   /* Sample */
+  max-width: 380px;
+  min-height: 550px;
+  max-height: auto;
+  margin:100px auto;
+  text-align: center;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 3px 3px 3px  lightgray;
 }
